Issue/4407-Alignment-in-multi-type-matrix (#4431)
* #4407 - Alignment in multi-type matrix
Fixes #4407

* #4407 - fix m-test
Resolved #4407

--- a/src/defaultV2-theme/blocks/sd-element.scss
+++ b/src/defaultV2-theme/blocks/sd-element.scss
@@ -34,7 +34,7 @@ div:only-child > .sd-element--with-frame:not(.sd-element--collapsed) {
 }
 .sd-table__cell--detail-panel {
   .sd-element:not(.sd-element--collapsed) {
-    padding-top: 0;
+    padding-top: calcSize(0.5);
   }
 }
 .sd-element.sd-element--complex {
